--- a/src/unit-tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
+++ b/src/unit-tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
@@ -1,39 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <Import Project="..\..\library-common.props" />
 
   <PropertyGroup>
-	  <TargetFrameworks>net7.0;net6.0;</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
-    <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;IDE0019;RCS1146;RCS1194</NoWarn>
+    <PackageId>GraphQL.AspNet.TestFramework</PackageId>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <TargetFrameworks>net7.0;net6.0;</TargetFrameworks>
     <RootNamespace>GraphQL.AspNet.Tests.Framework</RootNamespace>
-    <AssemblyName>graphql-aspnet-testframework</AssemblyName>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <CodeAnalysisRuleSet>..\..\styles.ruleset</CodeAnalysisRuleSet>
+    <AssemblyName>GraphQL.AspNet.TestFramework</AssemblyName>
+    <Title>GraphQL ASP.NET Test Framework</Title>
+    <PackageDescription>
+      A support library for quickly mocking a schema and server instance
+      to perform unit tests.
+    </PackageDescription>
   </PropertyGroup>
 
   <ItemGroup>
-    <AdditionalFiles Include="..\..\stylecop.json" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118" PrivateAssets="All" />
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Moq" Version="4.18.3" />
-    <PackageReference Include="nunit" Version="3.13.3" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-    <PackageReference Include="System.Text.Json" Version="4.6.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="2.2.4" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="2.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Localization.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="2.2.0" />
   </ItemGroup>
 
   <ItemGroup>
