--- a/src/ancillary-projects/starwars/starwars-common/starwars-common.csproj
+++ b/src/ancillary-projects/starwars/starwars-common/starwars-common.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net6.0;net7.0;</TargetFrameworks>
+    <TargetFrameworks>net7.0;net6.0;netstandard2.0;</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603</NoWarn>
     <RootNamespace>GraphQL.AspNet.StarwarsAPI.Common</RootNamespace>
