--- a/src/graphql-aspnet/graphql-aspnet.csproj
+++ b/src/graphql-aspnet/graphql-aspnet.csproj
@@ -18,4 +18,7 @@
     <Compile Remove="ServerExtensions/MultipartRequests/**/*.*" />
     <Compile Remove="Common/JsonNodes/**/*.*" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Configuration\Templates\" />
+  </ItemGroup>
 </Project>
