WIP, simple minimal api directives working

--- a/src/graphql-aspnet/graphql-aspnet.csproj
+++ b/src/graphql-aspnet/graphql-aspnet.csproj
@@ -12,4 +12,8 @@
     <None Include="..\..\build\nuget-package-readme.md" Pack="true" PackagePath="\README.md" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Directives\ActionResults\" />
+  </ItemGroup>
+
 </Project>
