--- a/src/unit-tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
+++ b/src/unit-tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
@@ -16,8 +16,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="NSubstitute" Version="5.0.0" />
   </ItemGroup>
+
 
   <ItemGroup>
     <ProjectReference Include="..\..\graphql-aspnet\graphql-aspnet.csproj" />
