WIP, integrated 1.0 attempt, all tests passing

--- a/src/CodeMaid.config
+++ b/src/CodeMaid.config
@@ -80,6 +80,10 @@
             <setting name="Progressing_HideBuildProgressOnBuildStop" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Cleaning_RunVisualStudioRemoveAndSortUsingStatements"
+                serializeAs="String">
+                <value>True</value>
+            </setting>
         </SteveCadwallader.CodeMaid.Properties.Settings>
     </userSettings>
 </configuration>
