--- a/src/library-tests.props
+++ b/src/library-tests.props
@@ -1,7 +1,7 @@
 <!-- Common property settings for 1st-party production libraries -->
 <Project>
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net7.0;net6.0;</TargetFrameworks>
+    <TargetFrameworks>net8.0;net6.0;</TargetFrameworks>
     <LangVersion>latest</LangVersion>
     <NoWarn>$(NoWarn);1701;1702;1705;1591;NU1603;IDE0019;IDE0017;RCS1146;RCS1194;</NoWarn>
     <RootNamespace>GraphQL.AspNet.Tests</RootNamespace>
