WIP, removed the need for an exposed "name formatter"
all type name formatting is done within the schema. no more magic strings.

--- a/src/graphql-aspnet/graphql-aspnet.csproj
+++ b/src/graphql-aspnet/graphql-aspnet.csproj
@@ -18,4 +18,8 @@
     <None Include="..\..\build\nuget-package-readme.md" Pack="true" PackagePath="\README.md" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configuration\Formatting\FormatRules\" />
+  </ItemGroup>
+
 </Project>
