WIP, Updates for .NET 9 build targets

--- a/src/unit-tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
+++ b/src/unit-tests/graphql-aspnet-testframework/graphql-aspnet-testframework.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\..\library-common.props" />
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0;net7.0;net6.0;</TargetFrameworks>
+    <TargetFrameworks>net9.0;net8.0;</TargetFrameworks>
     <RootNamespace>GraphQL.AspNet.Tests.Framework</RootNamespace>
     <AssemblyName>GraphQL.AspNet.TestFramework</AssemblyName>
     <Title>GraphQL ASP.NET Test Framework</Title>
